k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: task-app
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: abdulmunhim/task-management-system-notification-service:latest  # Correct image name
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: task-app
  labels:
    app: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP  # Use NodePort or LoadBalancer for external access
