k8s/task-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  namespace: task-app
  labels:
    app: task-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
        - name: task-service
          image: abdulmunhim/task-management-system-task-service:latest  # Correct image name
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: task-app
  labels:
    app: task-service
spec:
  selector:
    app: task-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP  # Use NodePort or LoadBalancer for external access
