k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-app-ingress
  namespace: task-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: task-app.local
      http:
        paths:
          - path: /user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3000
          - path: /task/?(.*)
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 3001
          - path: /notification/?(.*)
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 3002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5050
